<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bongo Thinks</string>

    <plurals name="credits_purchase_messgae_plurals">
        <item quantity="one">DO YOU WANT TO BUY %1$d CREDIT FOR %2$s?</item>
        <item quantity="other">DO YOU WANT TO BUY %1$d CREDITS FOR %2$s?</item>
    </plurals>

    <plurals name="credits_plurals">
        <item quantity="one">credit</item>
        <item quantity="other">credits</item>
    </plurals>

 	<string name="fb_app_id">760239814072784</string>


    <!-- No account -->
    <string name="noaccount_title">Ops!</string>
    <string name="noaccount_message">You have no Google account registered! Bongo can\'t address you without Google Cloud Messaging.</string>
    <string name="noaccount_btquit">Quit</string>

    <!-- Notification bar -->
    <string name="notification_title">Bongo</string>
    <string name="notification_text">You have new answered questions</string>

    <!-- Login -->
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_twitter">Log in with Twitter</string>
    <string name="login_skip">Skip</string>

    <string name="welcome">Welcome to Bongo</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="fb_login">Connecting to Facebook</string>
    <string name="twitter_login">Connecting to Twitter</string>
    <string name="connecting">Connecting</string>
    <string name="error_fb_login">Facebook connection error</string>
    <string name="error_kes_login">Login to KES failed</string>
    <string name="error_fb_nouserinfo">Could not retrieve user info</string>
    
    <!-- Preferences -->
    <string name="key_logout">key_logout</string>
    <string name="key_user_id">key_userid</string>
    <string name="key_user_firstname">key_userfirstname</string>
    <string name="key_user_lastname">key_userlastname</string>
    <string name="key_user_email">key_useremail</string>
    <string name="key_user_authtoken">key_userauthtoken</string>
    
    
    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_privacy">Privacy settings</string>
    <string name="action_about">About</string>
    <string name="action_agreement">Terms of agreement</string>
    <string name="action_support">Support</string>
    <string name="action_terms">Terms</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Not registered -->
    <string name="not_registered_title">See what bongo knows about you</string>
    <string name="not_registered_message">This page is inaccessible for users without an account. Sign up NOW!</string>
    <string name="not_registered_btstart">Get started</string>
    <string name="not_registered_dialog_message">This feature is inaccessible for users without an account. Get started and make an account now!</string>

    <string name="myfeed_noposts_title">Uh oh, You have no posts</string>
    <string name="myfeed_noposts_message">You don\'t have any questions for bongo yet.Ask him a question now!</string>
    <string name="myfeed_noposts_btn">Ask question</string>

    <string name="publicfeed_noposts_title">Uh oh, we have no posts</string>
    <string name="publicfeed_noposts_message">Please come back later!</string>
    <string name="publicfeed_noposts_btn">Refresh</string>

    <string name="feed_error_title">Uh oh, network error</string>
    <string name="feed_error_message">Could not load feed!</string>
    <string name="feed_error_btn">Retry</string>

    <!-- Feed -->
    <string name="feed_question">Question:</string>
    <string name="feed_answer">Answer:</string>
    <string name="feed_posting">Posting question...</string>
    <string name="share_title">Share question</string>
    <string name="share_unavailable">Share is not available</string>
    <string name="share_subject">Check out Bongo!</string>

    <string name="newsfeed">Newsfeed</string>
    <string name="myfeed">My questions</string>
    <string name="item_share">SHARE</string>
    <string name="loremipsum">Bacon ipsum dolor amet rump spare ribs t-bone swine, fatback pork belly meatball drumstick porchetta. Salami chuck porchetta meatloaf, beef picanha ball tip venison alcatra pancetta meatball tongue turkey. Picanha frankfurter chicken, biltong tongue corned beef pork belly chuck. T-bone pancetta tail ball tip biltong salami.</string>
    <string name="item_retry">Retry</string>
    <string name="item_noanswer">Bongo will answer your question as soon as possible</string>
    <string name="timeformat_day" formatted="false">%d days ago</string>
    <string name="timeformat_hour_min" formatted="false">%d hour %d mins ago</string>
    <string name="timeformat_min" formatted="false">%d mins ago</string>
    <string name="clipboard_label">Bongo Question</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

    <!-- Credit -->
    <string name="refund_email">support@bongo.com</string>
    <string name="refund_email_title">refund request</string>
    <string name="refund_email_message">Please cancel the following orders:</string>
    <string name="refund_email_dialog_title">Refund</string>
    <string name="purchase_retry">Retry</string>
    <string name="purchase_refund">Refund</string>
    <string name="credit_status_init">Initializing google play</string>
    <string name="credit_status_initfail">Failed initialize google play</string>
    <string name="credit_status_inventoryfail">Failed to retrieve products</string>
    <string name="credit_status_request_products">Loading</string>
    <string name="credit_status_processing">Processing payment</string>
    <string name="credit_status_processing_fail">Bongo could not get the bananas you have purchased.</string>
    <string name="credit_status_disconnected">Disconnected</string>
    <string name="credit_price_format" formatted="false">%s %.2f</string>
    <string name="fragment_credit_title">Get bananas</string>
    <string name="credit_info">Bongo\'s hungry!</string>
    <string name="credit_message">Hurry up and feed him bananas so he can answer more questions!</string>
    <string name="credit_itemname">\u0020/ Banana</string>
    <string name="btn_buy">BUY</string>
    <!-- Insufficient credit -->
    <string name="nocredit_message">Would you like to feed him bananas so he can answer more questions?</string>

    <!-- Compose -->
    <string name="compose_suggested">suggested questions</string>
    <string name="compose_private">private</string>
    <string name="compose_public">public</string>
    <string name="compose_invalidchar">Unsupported character</string>
    <string name="compose_title">Ask Bongo</string>
    <string name="compose_hint">Ask your question to Bongo</string>
    <string name="bubble_text">Add a photo or a question to submit to Bongo, or both!</string>
    <string name="error_nocamera">Sorry, camera isn\'t available.</string>
    <string name="error_storagewrite">Error writing to external storage.</string>
    <!-- Gallery -->
    <string name="gallery_title">Choose a picture</string>
    <!-- Crop -->
    <string name="crop_title">Crop your image</string>

    <!-- Preferences -->
    <string name="key_skip_login">skip_login</string>
    <string name="key_active_fragment">active_fragment</string>
    <string name="key_compose_text">compose_text</string>
    <string name="key_compose_private">compose_private</string>
    <string name="key_camera_picture">camera_picture</string>
    <string name="key_composed_picture">composed_picture</string>

    <!-- In app purchase -->
    <string name="credits_prefix">qredits_</string>
    <string-array name="credits_list">
        <item>credit_1</item>
        <item>credit_5</item>
        <item>credit_10</item>
    </string-array>

    <!-- Twitter -->
    <string name="callback_url_scheme">oauth</string>
    <string name="callback_url_host">twitterlogin</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="category_general">General</string>
    <string-array name="Language">
        <item>System default</item>
        <item>English (US)</item>
        <item>English (UK)</item>
        <item>French (France)</item>
        <item>Spanish (Spain)</item>
        <item>Italian</item>
    </string-array>

    <string-array name="languageAlias">
        <item>0</item>
        <item>"en-US"</item>
        <item>"en-GB"</item>
        <item>"fr-FR"</item>
        <item>"es-ES"</item>
        <item>"it-IT"</item>
    </string-array>

    <string name="key_language">key_language</string>
    <string name="title_language">Language</string>

    <string name="key_updateinterval">key_updateinterval</string>
    <string name="title_updateinterval">News update interval</string>

    <string-array name="updateInterval">
        <item>daily</item>
        <item>every 2 days</item>
        <item>every 3 days</item>
        <item>every week</item>
    </string-array>

    <string-array name="updateIntervalAlias">
        <item>24</item>
        <item>48</item>
        <item>72</item>
        <item>168</item>
    </string-array>

    <string name="key_gender">key_gender</string>
    <string name="title_gender">Gender</string>

    <string-array name="genderNames">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="genderAlias">
        <item>M</item>
        <item>F</item>
    </string-array>



    <string name="key_showsuggestion">key_showsuggestion</string>
    <string name="title_showsuggestion">Show suggestions</string>
    <string name="detail_showsuggestion">Show suggested questions at compose screen</string>

    <string name="category_account">Account</string>
    <string name="key_accountname">key_accountname</string>

    <string name="key_birthdate">key_birthdate</string>
    <string name="title_birthdate">Birth date</string>

    <string name="key_relationship">key_relationship</string>
    <string name="title_relationship">Relationship</string>

    <string-array name="relationshipNames">
        <item>Single</item>
        <item>In a relationship</item>
        <item>Common Law</item>
        <item>Married</item>
    </string-array>

    <string-array name="relationshipAlias">
        <item>S</item>
        <item>R</item>
        <item>C</item>
        <item>M</item>
    </string-array>

</resources>
